# Elixir

./: CMakeLists.txt
Libraries/: glad.c  glad.h
Shaders/: Cube.fragment
include/: ApplicationCore.hpp  Camera.hpp  Common.hpp  FileSystem.hpp  MainWindow.hpp  Mesh.hpp  Render.hpp  Shader.hpp  Texture.hpp
resources/shaders/: cube.frag  cube.vert
src/: ApplicationCore.cpp  Camera.cpp  FileSystem.cpp  MainWindow.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  main.cpp
